# reservation_classifier

./: Makefile  README.md  pyproject.toml
notebooks/: solution_sketch.ipynb
scripts/: predict.py  train.py
src/cancelation_classifier/config/: data.py  xgb.py
src/cancelation_classifier/model/: xgb.py
src/cancelation_classifier/preprocess/: preprocess_data.py
src/cancelation_classifier/utils/: data.py
test_src/: whats_the_date.py
