[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reservation_classifier"
version = "0.0.0"
authors = [
    {name = "myself-team", email = "samuel.hudec@gmail.com"},
]
description = "A library for better world"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas==2.*",
    "scikit-learn==1.2.2",
    "numpy==1.23.5",
    "xgboost==1.6.2",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.*",
    "matplotlib==3.8.1",
    "mypy == 1.2.*",
    "black == 22.*",
    "flake8 == 5.*",
    "isort==5.12.*",
    "pytest == 7.*",
    "pytest-cov == 4.*",
    "pytest-mock == 3.*"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
known_first_party = 'cancelation_classifier'
py_version = '39'
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
order_by_type = false
skip = [
    '.git',
    '.github',
    '.mypy_cache',
    '.pytest_cache',
    '.venv',
    'venv',
    '.env',
    '.idea',
    'data_local',
    'venv',
    'workdir'
]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["venv"]